# slim-tree

./: .gitignore  .project  CLAUDE.md  ContactMap.py  GenericMap.py  GetEnergy  GetEnergy.c  README.md  SLiMTree.py  __main__.py  bugs.md  dNdSCalculations.R  getDNAModel.py  getUserDefinedSequence.py  get_user_defined_sequence.py  pyproject.toml  sequences.txt  slimtree-calculate-K.md  utils.py  writeSLiM.py  writeSLiMHPC.py  writeSLiMProtein.py
DataPostProcessing/: FindPercentPolymorphic.R  find_branch_lengths.py  perform_analysis_fixation_counts.R  perform_statistical_analysis_branch_lengths.R  process_data.py
DataPreProcessing/: fitness_profile_finder.R
ExampleBatchScripts/: percent_polymorphic.sh  run_post_processing.sh  run_simulation.sh  run_simulations.sh
Examples/: README.txt
Goldstein-Pollock-2017-master/: ParameterList  README.md
contactmaps/: ContactMap.py  DistanceMap.py  GenericMap.py  LICENSE.txt  README  cmap.py  dmap.py  utils.py
fitnessDataFiles/: 5687A600  mj_matrix_eij.csv  mj_test_matrix.csv  slim_codon_nums.csv  table_fitness_profiles.csv  table_fitness_profiles_test.csv  table_stationary_distributions.csv
pdbfiles/: chain_ids.txt
tests/: Testing_Checklist.txt  testCalculateSelectionDenominators.py  testCladeReader.py  testConvertTree.py  testFindCoding.py  testFindFitness.py  testReadInput.py  testWriteSLiM.py  test_script.sh
utils/: __init__.py  calculateFitnesses.py  calculateSelectionDenominators.py  cladeReader.py  convertTree.py  findCoding.py  findFitness.py  fitness_profile_finder.R  readInput.py  writeSLiM.py  writeSLiMHPC.py
(+1215 files in other folders)
