[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slim-tree"
version = "1.0.0"
requires-python = ">=3.8"
description = "Forward-time population genetics simulator across phylogenetic timescales using SLiM"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Afarinesh Panahy", email = "afarinesh.panahy@gmail.com"},
]
keywords = [
  "population genetics",
  "phylogenetics",
  "simulation",
  "SLiM",
  "molecular evolution",
  "codon evolution",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "biopython>=1.79",
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "pyyaml>=5.4",
  "matplotlib>=3.4",
]

[project.urls]
Repository = "https://github.com/afarineshpanahy/slim-tree"

[project.scripts]
slim-tree = "SLiMTree:main"

[tool.setuptools]
py-modules = ["SLiMTree"]

[tool.setuptools.packages.find]
include = ["utils*", "fitnessDataFiles*"]

[tool.setuptools.package-data]
"fitnessDataFiles" = ["*.csv"]
